--- a/openshift_images/image-configuration-hcp.adoc
+++ b/openshift_images/image-configuration-hcp.adoc
@@ -17,6 +17,8 @@ include::modules/images-configuration-image-registry-settings-hcp.adoc[leveloffs
 
 include::modules/images-editing-image-registry-settings-hcp.adoc[leveloffset=+1]
 
+include::modules/images-updating-platform-allowlist-hcp.adoc[leveloffset=+2]
+
 ifndef::openshift-rosa,openshift-dedicated,openshift-rosa-hcp[]
 [role="_additional-resources"]
 .Additional resources
